@@ -287,56 +287,58 @@ class HelperFunctionsTests(unittest.TestCase):
                )
 
     def test_validate_boolean(self):
-        for t in self.boolean_settings:
-            self.assertEqual(
-                frontend.validate_boolean(None, t[0], self.option_parser),
-                t[1])
+        for v, result in self.boolean_settings:
+            self.assertEqual(frontend.validate_boolean(v), result)
 
     def test_validate_ternary(self):
         tests = (
                  ('500V', '500V'),
                  ('parrot', 'parrot'),
                 )
-        for t in self.boolean_settings + tests:
+        for v, result in self.boolean_settings + tests:
+            self.assertEqual(frontend.validate_ternary(v), result)
+
+    def test_validate_threshold(self):
+        tests = (('1', 1),
+                 ('info', 1),
+                 ('warning', 2),
+                 ('error', 3),
+                 ('severe', 4),
+                 ('none', 5),
+                 )
+        for v, result in tests:
             self.assertEqual(
-                frontend.validate_ternary(None, t[0], self.option_parser),
-                t[1])
+                frontend.validate_threshold(v), result)
+        with self.assertRaisesRegex(LookupError, "unknown threshold: 'debug'"):
+            frontend.validate_threshold('debug')
 
     def test_validate_colon_separated_string_list(self):
-        tests = (
-                    ('a', ['a']),
-                    ('a:b', ['a', 'b']),
-                    (['a'], ['a']),
-                    (['a', 'b:c'], ['a', 'b', 'c']),
-                )
-        for t in tests:
-            self.assertEqual(frontend.validate_colon_separated_string_list(
-                                 None, t[0], None),
-                             t[1])
+        tests = (('a', ['a']),
+                 ('a:b', ['a', 'b']),
+                 (['a'], ['a']),
+                 (['a', 'b:c'], ['a', 'b', 'c']),
+                 )
+        for v, result in tests:
+            self.assertEqual(
+                frontend.validate_colon_separated_string_list(v), result)
 
     def test_validate_comma_separated_list(self):
-        tests = (
-                    ('a', ['a']),
-                    ('a,b', ['a', 'b']),
-                    (['a'], ['a']),
-                    (['a', 'b,c'], ['a', 'b', 'c']),
-                )
-        for t in tests:
-            self.assertEqual(
-                    frontend.validate_comma_separated_list(None, t[0], None),
-                    t[1])
+        tests = (('a', ['a']),
+                 ('a,b', ['a', 'b']),
+                 (['a'], ['a']),
+                 (['a', 'b,c'], ['a', 'b', 'c']),
+                 )
+        for v, result in tests:
+            self.assertEqual(frontend.validate_comma_separated_list(v), result)
 
     def test_validate_url_trailing_slash(self):
-        tests = (
-                    ('', './'),
-                    (None, './'),
-                    ('http://example.org', 'http://example.org/'),
-                    ('http://example.org/', 'http://example.org/'),
-                )
-        for t in tests:
-            self.assertEqual(
-                    frontend.validate_url_trailing_slash(None, t[0], None),
-                    t[1])
+        tests = (('', './'),
+                 (None, './'),
+                 ('http://example.org', 'http://example.org/'),
+                 ('http://example.org/', 'http://example.org/'),
+                 )
+        for v, result in tests:
+            self.assertEqual(frontend.validate_url_trailing_slash(v), result)
 
     def test_validate_smartquotes_locales(self):
         tests = (
@@ -345,10 +347,8 @@ class HelperFunctionsTests(unittest.TestCase):
             ([('sd', '«»°°'), 'ds:°°«»'], [('sd', '«»°°'), ('ds', '°°«»')]),
             ('frs:« : »:((:))', [('frs', ['« ', ' »', '((', '))'])]),
             )
-        for t in tests:
-            self.assertEqual(
-                    frontend.validate_smartquotes_locales(None, t[0], None),
-                    t[1])
+        for v, result in tests:
+            self.assertEqual(frontend.validate_smartquotes_locales(v), result)
 
     def test_set_conditions_deprecation_warning(self):
         reporter = utils.Reporter('test', 1, 4)
